--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
   "dependencies": {
     "body-parser": "^1.17.2",
     "express": "^4.15.3",
+    "mongoose": "^4.11.6",
     "pug": "^2.0.0-rc.3"
+  },
+  "devDependencies": {
+    "@angular/cli": "^1.3.0"
   }
 }
